--- a/footer.css
+++ b/footer.css
@@ -17,7 +17,7 @@ footer .credit {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 1em;
-    padding: 1em;
+    padding: 1em 10vw;
     text-align: left;
   }
   footer .navfooter nav {
